@@ -18,6 +18,7 @@ Bug Fixes::
 * always force NULL character to have 0 width, even if missing from font (#2585)
 * don't drop line in running content if attribute reference resolves to text that contains attribute reference (not originally present)
 * respect hide-uri-scheme when appending URL to link text when media is print or prepress (#2583)
+* correctly calculate extent for block in columns that starts below doctitle (#2579)
 
 Compliance::
 
